@@ -1,16 +1,20 @@
 package com.xertica.config;
 
+import com.xertica.entity.User;
+import com.xertica.repository.UserRepository;
 import com.xertica.security.JwtUtils;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -18,9 +22,13 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Configuration
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final UserRepository userRepository;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -29,10 +37,10 @@ public class SecurityConfig {
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/users/login", "/api/users/signup").permitAll()
                         .anyRequest().authenticated())
-                .httpBasic().disable()
-                .formLogin().disable()
+                .httpBasic(httpBasic -> httpBasic.disable())
+                .formLogin(form -> form.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new JwtAuthenticationFilter(),
+                .addFilterBefore(new JwtAuthenticationFilter(userRepository),
                         org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -43,22 +51,30 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
+    // Filtro JWT
     public static class JwtAuthenticationFilter extends OncePerRequestFilter {
+
+        private final UserRepository userRepository;
+
+        public JwtAuthenticationFilter(UserRepository userRepository) {
+            this.userRepository = userRepository;
+        }
 
         @Override
         protected void doFilterInternal(HttpServletRequest request,
-                                        HttpServletResponse response,
-                                        FilterChain filterChain) throws ServletException, IOException {
+                HttpServletResponse response,
+                FilterChain filterChain) throws ServletException, IOException {
 
             String path = request.getRequestURI();
+            String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
 
-            // Ignorar login/signup, independentemente do contexto
-            if (path.contains("/api/users/login") || path.contains("/api/users/signup")) {
+            System.out.println("PATH: " + path);
+            System.out.println("AUTH: " + authHeader);
+
+            if (path.equals("/api/users/login") || path.equals("/api/users/signup")) {
                 filterChain.doFilter(request, response);
                 return;
             }
-
-            String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
 
             if (authHeader != null && authHeader.startsWith("Bearer ")) {
                 String token = authHeader.substring(7);
@@ -66,18 +82,18 @@ public class SecurityConfig {
                     var claims = JwtUtils.validateToken(token).getBody();
                     String email = claims.getSubject();
 
-                    var auth = new UsernamePasswordAuthenticationToken(
-                            email,
-                            null,
-                            java.util.Collections.emptyList());
-                    SecurityContextHolder.getContext().setAuthentication(auth);
+                    User user = userRepository.findByEmail(email).orElse(null);
+                    if (user != null) {
+                        var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+                        var auth = new UsernamePasswordAuthenticationToken(email, null, authorities);
+                        SecurityContextHolder.getContext().setAuthentication(auth);
+                    }
 
                 } catch (Exception e) {
                     response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                     return;
                 }
             } else {
-                // Sem token → não autorizado
                 response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                 return;
             }
